--- a/package.json
+++ b/package.json
@@ -10,15 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.2.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "@types/react-native": "^0.73.0",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-animatable": "^1.4.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-toast-message": "^2.2.1",
     "react-native-typescript-transformer": "^1.2.10",
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.5.3"
